# simdjson-rust

./: CMakeLists.txt
